# rl-kyc-task-env

./: .dockerignore  .gitignore  DETAILS.md  PLAN.md  README.md  justfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
baselines/heuristic_baseline/: extract.py
baselines/null_baseline/: extract.py
docker/: eval-runtime.Dockerfile
generator/: field_sampling.py  generate_hidden.py  generate_public.py  ocr_noise.py  render.py  template_specs_private.py  template_specs_public.py  utils.py
harness/: artifacts.py  diagnostics.py  prompt_builder.py  runner.py
harness/cli/: external_agent_eval.py
integrations/openreward/: README.md
integrations/verifiers/: README.md
judge/: judge_utils.py  run_judge.py
private/: seed_bank.json  seed_config.json
private/hidden_gold/: doc_000000.json  doc_000001.json  doc_000002.json  doc_000006.json  doc_000009.json  doc_000011.json  doc_000012.json  doc_000013.json  doc_000014.json  doc_000016.json  doc_000018.json  doc_000023.json  doc_000024.json  doc_000025.json  doc_000027.json  doc_000034.json  doc_000039.json  doc_000040.json  doc_000042.json  doc_000045.json  doc_000046.json  doc_000048.json  doc_000049.json  doc_000050.json  doc_000051.json  doc_000052.json  doc_000055.json  doc_000057.json  doc_000058.json  doc_000059.json  doc_000060.json  doc_000061.json  doc_000062.json  doc_000063.json  doc_000065.json  doc_000066.json  doc_000067.json  doc_000071.json  doc_000072.json  doc_000074.json  (+14 more)
private/hidden_test/doc_000000/: ocr.json
private/hidden_test/doc_000001/: ocr.json
private/hidden_test/doc_000002/: ocr.json
private/hidden_test/doc_000003/: ocr.json  target.json
private/hidden_test/doc_000004/: meta.json  ocr.json  target.json
rl_kyc_task_env/: __init__.py  bundles.py  containers.py  datasets.py  environment.py  evaluation.py  paths.py  prediction_io.py  prompts.py  records.py  runner.py  schemas.py  scoring.py
rl_kyc_task_env/integrations/: openreward.py  verifiers.py
task/: README.md  prompt.txt
task/schemas/: government_id.schema.json  payment_receipt.schema.json  proof_of_address.schema.json
task/tools/: canonicalize.py  eval_core.py  public_validator.py  visualize_ocr.py
tests/: test_bundles.py  test_cli_compat.py  test_container_mounts.py  test_contract_scores.py  test_dataset_records.py  test_environment_api.py  test_openreward_integration.py  test_prediction_io.py  test_project_polish.py  test_scoring.py  test_verifiers_integration.py
(+1414 files in other folders)
