[project]
name = "doc-extract-env"
version = "0.1.0"
description = "Local assessment environment for structured extraction from noisy OCR and document layout."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "Faker>=19.0",
  "jsonschema>=4.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "Pillow>=10.0",
  "pydantic>=2.0",
  "python-dateutil>=2.8",
  "rapidfuzz>=3.0",
]

[tool.uv]
package = false
