[project]
name = "doc-extract-env"
version = "0.1.0"
description = "Local assessment environment for structured extraction from documents with OCR and layout noise."
readme = "README.md"
requires-python = "==3.12.2"
dependencies = [
  "Faker==40.13.0",
  "jsonschema==4.26.0",
  "numpy==2.4.4",
  "pandas==3.0.2",
  "Pillow==12.2.0",
  "pydantic==2.13.0",
  "python-dateutil==2.9.0.post0",
  "rapidfuzz==3.14.5",
]

[project.optional-dependencies]
verifiers = ["verifiers==0.1.11"]
openreward = ["openreward==0.1.112"]
frameworks = ["verifiers==0.1.11", "openreward==0.1.112"]

[project.scripts]
rl-kyc-public-validator = "task.tools.public_validator:main"
rl-kyc-hidden-judge = "judge.run_judge:main"
rl-kyc-harness = "harness.cli.external_agent_eval:main"

[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["rl_kyc_task_env", "harness"]
include = [
  "/baselines",
  "/docker",
  "/generator",
  "/judge",
  "/private",
  "/task",
  "/justfile",
  "/DETAILS.md",
]
exclude = [
  "/dist",
  "/build",
  "/.venv",
  "/.git",
  "/.github",
  "/tests",
]

[tool.hatch.build.targets.sdist]
include = [
  "/baselines",
  "/docker",
  "/generator",
  "/harness",
  "/integrations",
  "/judge",
  "/private",
  "/rl_kyc_task_env",
  "/task",
  "/tests",
  "/DETAILS.md",
  "/README.md",
  "/justfile",
  "/pyproject.toml",
  "/uv.lock",
]
exclude = [
  "/dist",
  "/build",
  "/.venv",
  "/.git",
]
